Updated front page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
     <title>Assignment 1</title>
 </head>
 <body>
@@ -15,7 +18,7 @@
         <a href="#contact">Contact</a>
     </nav>
     <section class="content">
-        
+        <h1 class="header">Website Building. Made Easy.</h1>
     </section>
     <section class="container">
 
