--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
@@ -21,7 +20,15 @@
         <h1 class="header">Website Building. Made Easy.</h1>
     </section>
     <section class="container">
+        <div class="typing-container">
+            <span id="sentence" class="sentence">Here, take this </span>
+            <span id="feature-text"></span>
+            <span class="input-cursor"></span>
+          </div>
+          <div>
 
+          </div>
     </section>
 </body>
 </html>
+<script src="main.js" type="text/javascript"></script>
