Completed 3rd section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div>
             <p style="font-family: 'Inter', sans-serif; font-weight: 300; font-size: 3rem; margin: 0px;">Start creating clean and</p>
             <p style="font-family: 'Inter', sans-serif; font-weight: 500; font-size: 3rem; margin-top: 0px;">optmised landings.</p>
-          </div>
+        </div>
           <div class="card-container">
             <div class="card">
                 <div class="card-header">
@@ -53,6 +53,29 @@
                 </div>
             </div>
           </div>
+    </section>
+    <section class="container" style="background-color: #eee; flex-direction: column; min-height: 250vh; gap: 50px;">
+        <div class="gallery-text">
+            <p style="font-family: 'Inter', sans-serif; font-weight: 500; font-size: 3rem; margin: 0px;">Made With XYZ.<br>Real Websites.<br>Real Projects.</p>
+        </div>
+        <div class="gallery-container-container">
+            <div class="gallery-container">
+                <div class="gallery-card">
+                        <img src="../assets/dudleysync.jpg" alt="image of a website's landing">
+                </div>
+                <div class="gallery-card" style="min-height: 100vh;">
+                        <img src="../assets/bluedognyc.jpg" alt="image of a website's landing">
+                </div>
+            </div>
+            <div class="gallery-container">
+                <div class="gallery-card" style="min-height: 100vh;">
+                        <img src="../assets/leisirwine.jpg" alt="image of a website's landing">
+                </div>
+                <div class="gallery-card">
+                        <img src="../assets/fireandflourbread.jpg" alt="image of a website's landing">
+                </div>
+            </div>
+        </div>
     </section>
     <script src="https://unpkg.com/feather-icons"></script>
     <script>
