Implemented contact section

--- a/index.html
+++ b/index.html
@@ -77,6 +77,37 @@
             </div>
         </div>
     </section>
+    <section class="container" style="flex-direction: column; gap: 50px;">
+        <div class="gallery-text" style="text-align: left;">
+            <p style="font-family: 'Inter', sans-serif; font-weight: 500; font-size: 3rem; margin: 0px;">Let's make something big.
+                <br>Together.</p>
+        </div>
+        <form action="#" class="form">
+            <div class="form-row">
+                <div style="min-width: 38vh;">
+                    <label for="yourName" class="form-label">Your Name</label>
+                    <input type="text" class="form-control" id="yourName" placeholder="Your Name">
+                  </div>
+                  <div style="min-width: 38vh;">
+                    <label for="yourCompany" class="form-label">Your Company</label>
+                    <input type="text" class="form-control" id="yourCompany" placeholder="Your Company">
+                  </div>
+            </div>
+            <div class="col-md-12">
+              <label for="yourMessage" class="form-label">Message</label>
+              <textarea class="form-control" id="yourMessage" rows="3" placeholder="Message"></textarea>
+            </div>
+            <div class="col-md-8">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck">
+                <label class="form-check-label" for="gridCheck"> I accept the <a href="">Terms
+                  &amp; Conditions</a> and acknowledge that my information will be used in accordance with Privacy
+                  Policy. </label>
+              </div>
+            </div>
+            <div> <a href="" class="btn">Get in touch</a> </div>
+          </form>
+    </section>
     <script src="https://unpkg.com/feather-icons"></script>
     <script>
         feather.replace()
