--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
               <label for="yourMessage" class="form-label">Message</label>
               <textarea class="form-control" id="yourMessage" rows="3" placeholder="Message"></textarea>
             </div>
-            <div class="col-md-8">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="gridCheck">
+            <div>
+              <div>
+                <input type="checkbox" id="gridCheck">
                 <label class="form-check-label" for="gridCheck"> I accept the <a href="">Terms
                   &amp; Conditions</a> and acknowledge that my information will be used in accordance with Privacy
                   Policy. </label>
@@ -108,6 +108,35 @@
             <div> <a href="" class="btn">Get in touch</a> </div>
           </form>
     </section>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-row">
+                <div>
+                    <h4>1 George St, Level 45<br>
+                      Singapore 049145</h4>
+                </div>
+                <div> 
+                    <p class="h5">+65 6713 3566</p> 
+                </div>
+            </div>
+            <div>
+                <div class="col">
+                  <hr>
+                </div>
+            </div>
+            <div class="footer-row">
+                <div>
+                    <p style="font-size: 1rem;">Copyright© | 2021</p>
+                </div>
+                <div>
+                  <ul class="list-inline">
+                    <li style="display: inline;"><a href="" class="social-logos"><i data-feather="twitter"></i></a></li>
+                    <li style="display: inline;"><a href="" class="social-logos"><i data-feather="youtube"></i></a></li>
+                  </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://unpkg.com/feather-icons"></script>
     <script>
         feather.replace()
