--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
             </div>
           </div>
     </section>
-    <section class="gallery-section" style="background-color: #eee; flex-direction: column; min-height: 250vh; gap: 50px;">
+    <section class="gallery-section">
         <div class="gallery-text">
-            <p style="font-family: 'Inter', sans-serif; font-weight: 500; font-size: 3rem; margin: 0px;">Made With XYZ.<br>Real Websites.<br>Real Projects.</p>
+            <p class="font">Made With XYZ.<br>Real Websites.<br>Real Projects.</p>
         </div>
         <div class="gallery-container-container">
             <div class="gallery-container">
                 <div class="gallery-card">
                         <img src="../assets/dudleysync.jpg" alt="image of a website's landing">
                 </div>
-                <div class="gallery-card" style="min-height: 100vh;">
+                <div class="gallery-card-long">
                         <img src="../assets/bluedognyc.jpg" alt="image of a website's landing">
                 </div>
             </div>
             <div class="gallery-container">
-                <div class="gallery-card" style="min-height: 100vh;">
+                <div class="gallery-card-long">
                         <img src="../assets/leisirwine.jpg" alt="image of a website's landing">
                 </div>
                 <div class="gallery-card">
@@ -96,7 +96,7 @@
                     <input type="text" class="form-control" id="yourCompany" placeholder="Your Company">
                   </div>
             </div>
-            <div class="col-md-12">
+            <div>
               <label for="yourMessage" class="form-label">Message</label>
               <textarea class="form-control" id="yourMessage" rows="3" placeholder="Message"></textarea>
             </div>
