Updated file structure

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
@@ -64,18 +64,18 @@
         <div class="gallery-container-container">
             <div class="gallery-container">
                 <div class="gallery-card">
-                        <img src="../assets/dudleysync.jpg" alt="image of a website's landing">
+                        <img src="../images/dudleysync.jpg" alt="image of a website's landing">
                 </div>
                 <div class="gallery-card-long">
-                        <img src="../assets/bluedognyc.jpg" alt="image of a website's landing">
+                        <img src="../images/bluedognyc.jpg" alt="image of a website's landing">
                 </div>
             </div>
             <div class="gallery-container">
                 <div class="gallery-card-long">
-                        <img src="../assets/leisirwine.jpg" alt="image of a website's landing">
+                        <img src="../images/leisirwine.jpg" alt="image of a website's landing">
                 </div>
                 <div class="gallery-card">
-                        <img src="../assets/fireandflourbread.jpg" alt="image of a website's landing">
+                        <img src="../images/fireandflourbread.jpg" alt="image of a website's landing">
                 </div>
             </div>
         </div>
@@ -147,4 +147,4 @@
     </script>
 </body>
 </html>
-<script src="main.js" type="text/javascript"></script>
+<script src="./js/main.js" type="text/javascript"></script>
