--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Assignment 1</title>
 </head>
 <body>
+    <!-- Navigation bar section -->
     <nav id="navbar">
         <a href="">Gallery</a>
         <a href="">Pricing</a>
@@ -20,6 +21,7 @@
     <section class="content">
         <h1 class="header">Website Building. Made Easy.</h1>
     </section>
+    <!-- Card section -->
     <section class="container" style="flex-direction: column;">
         <div>
             <p class="font" style="font-weight: 300;  margin-bottom: 0px;">Start creating clean and</p>
@@ -57,6 +59,7 @@
             </div>
           </div>
     </section>
+    <!-- Gallery section -->
     <section class="gallery-section">
         <div class="gallery-text">
             <p class="font">Made With XYZ.<br>Real Websites.<br>Real Projects.</p>
@@ -80,6 +83,7 @@
             </div>
         </div>
     </section>
+    <!-- Contact section -->
     <section class="container" style="flex-direction: column; gap: 50px;">
         <div class="gallery-text" style="text-align: left;">
             <p class="font">Let's make something big.
@@ -111,6 +115,7 @@
             <div> <a href="" class="btn">Get in touch</a> </div>
           </form>
     </section>
+    <!-- Footer -->
     <footer>
         <div class="footer-container">
             <div class="footer-row">
